[package]
name = "pnet_layers"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "./README.md"
authors = ["Tobias Müller <git@tsmr.eu>"]
description = "A scapy like wrapper around the pnet crate to easily parse, craft or manipulate network packets in Rust."
repository = "https://github.com/otsmr/pnet_layers"
categories = ["network-programming"]
license-file = "./LICENSE"

[dependencies]
log = "0.4.26"
pnet = { version = "0.35.0", features = ["serde"] }
rand = "0.9.0"
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
hex = "0.4.3"
serde = { version = "1.0.0", features = ["derive"] }
